<resources>
    <string name="app_name">shop</string>
    <string name="checkout_header">Оформление заказа</string>
    <string name="cash">Наличными</string>
    <string name="card">Картой при получении</string>
    <string name="payment_method">Способ оплаты</string>
    <string name="phone_number">Номер телефона</string>
    <string name="contacts_header">Контактные данные</string>
    <string name="last_name">Фамилия</string>
    <string name="first_name">Имя</string>
    <string name="middle_name">Отчество</string>
    <string name="order_header">Информация о заказе</string>
    <string name="full_price">Полная цена</string>
    <string name="total_price">Итого</string>
    <string name="discount">Скидка</string>
    <string name="checkout_order">Заказать</string>
    <string name="phone_example">Пример, 89999999999 или +79999999999</string>
    <string name="back_description">Назад</string>
    <string name="catalog_header">Каталог</string>
    <string name="description_header">Описание</string>
    <string name="add_to_cart">Добавить</string>
    <string name="to_checkout">Оформить</string>
    <string name="good_list_header">Список товаров</string>
    <string name="cart_header">Корзина</string>
    <string name="img_description">Товар</string>
    <string name="drop_item">Удалить</string>
</resources>
